# pixiv-fav-export

./: .gitignore  README.md  crawl.ipynb  export.ipynb  pyproject.toml
