[project]
name = "pixiv-fav-export"
version = "0.1.0"
description = "Export your favorited illustions from Pixiv"
readme = "README.md"
requires-python = ">=3.10" # For "|" typing operator
dependencies = [
    "gppt>=4.1.0",
    "ipykernel>=6.29.5",
    "pixivpy3>=3.7.5",
    "python-dotenv>=1.0.1",
]
